--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0"
+  }
 }
