--- a/package.json
+++ b/package.json
@@ -7,31 +7,29 @@
     "url": "https://github.com/kevinpeckham/svelte-typescript-tailwind-pug-starter"
   },
   "devDependencies": {
-    "@playwright/test": "^1.30.0",
-    "@prettier/plugin-pug": "^2.4.1",
+    "@playwright/test": "^1.32.3",
+    "@prettier/plugin-pug": "^2.4.2",
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-vercel": "^2.2.1",
-    "@sveltejs/kit": "^1.9.3",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
+    "@sveltejs/adapter-vercel": "^2.4.1",
+    "@sveltejs/kit": "^1.15.5",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-svelte": "^2.9.0",
+    "postcss": "^8.4.22",
+    "prettier": "^2.8.7",
+    "prettier-plugin-svelte": "^2.10.0",
     "pug": "^3.0.2",
-    "svelte": "^3.55.1",
-    "svelte-check": "^3.0.4",
-    "svelte-preprocess": "^5.0.1",
-    "tailwindcss": "^3.2.7",
+    "svelte": "^3.58.0",
+    "svelte-check": "^3.2.0",
+    "svelte-preprocess": "^5.0.3",
+    "tailwindcss": "^3.3.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.4",
     "vite": "^4.2.1",
-    "vitest": "^0.29.2"
+    "vitest": "^0.30.1"
   },
   "description": "A Svelte, Typescript, Tailwindcss, & Pug starter template",
   "homepage": "https://skinnypug.dev",
@@ -58,6 +56,7 @@
   "type": "module",
   "dependencies": {
     "graphql": "^16.6.0",
-    "graphql-request": "^5.2.0"
+    "graphql-request": "^5.2.0",
+    "prettier-plugin-tailwindcss": "^0.2.7"
   }
 }
