--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ pnpm-lock.yaml
 .svelte-kit
 # generated/
 # output/
+.output
 # /.svelte-kit/types
 
 # Editor files
@@ -43,3 +44,7 @@ pnpm-lock.yaml
 
 # hosting providers
 .vercel
+
+# vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
