--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "toods",
-  "version": "0.0.1",
-  "author": "Kevin Peckham",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kevinpeckham/svelte-typescript-tailwind-pug-starter"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.32.3",
-    "@prettier/plugin-pug": "^2.4.2",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-vercel": "^2.4.1",
-    "@sveltejs/kit": "^1.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.22",
-    "prettier": "^2.8.7",
-    "prettier-plugin-svelte": "^2.10.0",
-    "pug": "^3.0.2",
-    "svelte": "^3.58.0",
-    "svelte-check": "^3.2.0",
-    "svelte-preprocess": "^5.0.3",
-    "tailwindcss": "^3.3.1",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1",
-    "vitest": "^0.30.1"
-  },
-  "description": "A Svelte, Typescript, Tailwindcss, & Pug starter template",
-  "homepage": "https://skinnypug.dev",
-  "keywords": [
-    "Svelte",
-    "Typescript",
-    "TailwindCSS",
-    "Pug",
-    "Starter"
-  ],
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "playwright test",
-    "test:unit": "vitest",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "type": "module",
-  "dependencies": {
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.2.0",
-    "prettier-plugin-tailwindcss": "^0.2.7"
-  }
+	"name": "toods",
+	"version": "0.0.1",
+	"author": "Kevin Peckham",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/kevinpeckham/svelte-typescript-tailwind-pug-starter"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.32.3",
+		"@prettier/plugin-pug": "^2.4.2",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^2.4.1",
+		"@sveltejs/kit": "^1.15.5",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.38.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"@neoconfetti/svelte": "^1.0.0",
+		"postcss": "^8.4.22",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
+		"pug": "^3.0.2",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.2.0",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.1",
+		"tslib": "^2.5.0",
+		"typescript": "^5.0.4",
+		"vite": "^4.2.1",
+		"vitest": "^0.30.1"
+	},
+	"description": "A Svelte, Typescript, Tailwindcss, & Pug starter template",
+	"homepage": "https://skinnypug.dev",
+	"keywords": [
+		"Svelte",
+		"Typescript",
+		"TailwindCSS",
+		"Pug",
+		"Starter"
+	],
+	"license": "MIT",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "playwright test",
+		"test:unit": "vitest",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"type": "module",
+	"dependencies": {
+		"graphql": "^16.6.0",
+		"graphql-request": "^5.2.0",
+		"prettier-plugin-tailwindcss": "^0.2.7"
+	}
 }
