chore: async loading from local storage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
 	// enable emmet completions for tailwind
 	"tailwindCSS.emmetCompletions": true,
 	// enable linting
-	"tailwindCSS.validate": true
+	"tailwindCSS.validate": true,
+	"cSpell.words": ["neoconfetti"]
 }
