--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.26.0",
 		"postcss": "^8.4.23",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
